# aoc

./: pyproject.toml
2022/day1/: day1.py
2022/day2/: day2.py
2022/day3/: day3.py
2022/day4/: day4.py
2022/day5/: day5.py
2022/day6/: day6.py
2022/day7/: day7.py
2023/day1/: day1.go  day1.py
2023/day2/: day2.py
2023/day3/: day3.py
2023/day4/: day4.py
