[tool.poetry]
name = "advent-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "advent_code"}]

[tool.poetry.dependencies]
python = "^3.10"
dlint = "^0.13.0"
flake8 = "5.0.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
